src/defaultV2-theme/blocks/sd-title.scss
.svc-tab-designer .sd-title {
  display: flex;
}
.sd-title {
  display: flex;
  align-items: center;
  font-family: $font-family;
  font-style: normal;
  color: $foreground;
  flex-direction: row;
  white-space: normal;
  word-break: break-word;
}

.sd-title.sd-container-modern__title {
  display: flex;
  padding: var(--sd-page-vertical-padding) var(--sd-page-vertical-padding);
  overflow: auto;
  font-family: $font-family;
  gap: calcSize(4);
  box-shadow: 0px 2px 0px $primary;
  .sd-logo__image {
    margin-top: calcSize(1);
  }
}

.sd-header__text {
  display: flex;
  flex-direction: column;
  gap: calcSize(1);
  flex-grow: 1;
  h3 {
    font-size: calcSize(4);
    font-weight: 700;
    line-height: calcSize(5);
    color: $primary;
  }
  h5 {
    font-size: calcSize(2);
    font-weight: 400;
    line-height: calcSize(3);
  }
}
//todo: add ability to customize class sv-title-actions in library
.sd-title {
  .sv-title-actions {
    width: 100%;
    justify-content: space-between;
  }
  .sd-action-bar {
    margin: calcSize(-1) 0;
    margin-right: calcSize(-3);
  }
}
.sd-root-modern:not(.svc-tab-designer) {
  .sd-container-modern__title {
    background-color: $background;
  }
}
.sd-root-modern {
  .sd-container-modern__title {
    .sd-header__text h3 {
      margin: 0;
    }
    .sd-description {
      margin: 0;
    }
  }
}

.sd-action-title-bar {
  flex: 1 1 auto;
  justify-content: flex-end;
  min-width: unset;
}

